--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -14,6 +14,10 @@
               <li class="list-inline-item"><a class="nav-link" href="/logout" (click)=logout()>Logout</a></li>
             </div>
           </ul>
+
+          <ul class="text-center list-inline py-3">
+            <li class="list-inline-item"><a routerLink="/products" class="btn btn-info"> Product List</a></li>
+          </ul>
         </div>
       </div>
       <router-outlet></router-outlet>
