--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
@@ -4,7 +4,7 @@
         <mat-card-title>{{ product.name }}</mat-card-title>
         <mat-card-subtitle>{{ product.price | currency }}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="{{product.imageURL}}" >
+    <img mat-card-image src="{{product.imageURL}}">
     <mat-card-content>
         <p>{{ product.description }}</p>
         <p>Brand: {{product.brand}}</p>
@@ -15,8 +15,12 @@
 </mat-card>
 <br/>
 <div id="wrapper">
-  <div class="box">
-    <h2>Related Items</h2>
-    <app-related-items [product]="product"></app-related-items>
-  </div>
-</div>
+    <div class="box">
+        <h2>Related Items</h2>
+        <app-related-items [product]="product"></app-related-items>
+
+        <div *ngIf="product">
+            <h3>{{ product.name }}</h3>
+            <h4>{{ product.price | currency }}</h4>
+            <p>{{ product.description }}</p>
+        </div>
