--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -18,6 +18,10 @@
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item"><a routerLink="/products" class="btn btn-info"> Product List</a></li>
           </ul>
+
+          <ul class="text-center list-inline py-3">
+            <li class="list-inline-item"><a routerLink="/products" class="btn btn-info"> Product List</a></li>
+          </ul>
         </div>
       </div>
       <router-outlet></router-outlet>
