--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
@@ -21,6 +21,14 @@
 
         <div *ngIf="product">
             <h3>{{ product.name }}</h3>
+            <img src="{{product.image}}">
             <h4>{{ product.price | currency }}</h4>
             <p>{{ product.description }}</p>
+            <p>Brand: {{product.brand}}</p>
         </div>
+
+        <br>
+        <h2>Related Items</h2>
+
+        <app-related-items [product]="product">
+        </app-related-items>
