--- a/Comp354Project/Project-UI/src/app/Components/related-items/related-items.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/related-items/related-items.component.html
@@ -8,3 +8,11 @@
         </div>
     </div>
 </div> -->
+<div *ngFor="let prod of products;index as productId">
+    <table *ngIf="prod.type == product.type && prod.name != product.name">
+        <tr>{{prod.name}}</tr>
+        <tr>
+            <a [routerLink]="['/products', productId]"> <img src="{{prod.image}}"></a>
+        </tr>
+    </table>
+</div>
