products organized in a row and display filter working

--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.css
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.css
@@ -3,3 +3,22 @@
     border-style: solid;
     margin-left: 25%;
 }
+
+#wrapper {
+    display: inline!important;
+    height: 275px;
+    max-width: 540px;
+}
+
+.box {
+    margin: 5px;
+    display: inline-block;
+    width: 170px;
+    height: 275px!important;
+    rking text-align: center;
+    float: left;
+}
+
+.ng-repeat {
+    display: inline-block;
+}
