products organized in a row and display filter working

--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
@@ -1,9 +1,29 @@
 .product-card {
-  width: 300px;
-  border-style:solid;
+    width: 300px;
+    border-style: solid;
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto ;
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+#wrapper {
+    display: inline!important;
+    height: 275px;
+    max-width: 540px;
+}
+
+.box {
+    margin: 5px;
+    display: inline-block;
+    width: 170px;
+    height: 275px!important;
+    background-color: #F5FBEF;
+    text-align: center;
+    float: left;
+}
+
+.ng-repeat {
+    display: inline-block;
 }
