add header-component with some divs and html code

--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header-area></app-header-area>
 
 <div class="container">
   <div class="row">
@@ -7,6 +8,8 @@
           <h2 class="card-title text-center text-white py-3" >{{ title }}</h2>
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item"><a routerLink="/users" class="btn btn-info"> List Users</a></li>
+            <li>hello</li>
+
           </ul>
         </div>
       </div>
