--- a/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
@@ -1,18 +1,18 @@
 <!-- <p>header-area works!</p> -->
-<div style="height:150px;border-style:solid;border-color:black;background-color:gray;">
+<div style="height:150px;border-style:solid;border-color:black;background-color:firebrick;">
 
 
     <div>
-        <div style="height:60px;width:190px;border-style:solid;border-color:black;float:left;">
-            <p style="font-family: Impact, Charcoal, sans-serif;font-size:28px;font-style:italic;font-variant:small-caps;color:white;letter-spacing:2px;">
+        <div style="height:60px;width:190px;float:left;">
+            <p style="font-family: Impact, Charcoal, sans-serif;font-size:28px;font-style:italic;font-variant:small-caps;color:deepskyblue;letter-spacing:2px;">
                 354TheStars
             </p>
 
         </div>
 
 
-        <!-- login button-->
-        <div style="height:150px;width:300px;border-style:solid;border-color:blue;float:right;background-color:black;">
+        <!-- Register & login button-->
+        <div style="height:147px;width:300px;float:right;background-color:darkslategrey;border-style:none none solid solid;border-color:black;">
 
             <div style="width:50px;height:auto;display:inline-block;"></div>
             <p style="color:white;">Register or Login to shop & sell!</p>
@@ -37,7 +37,45 @@
         <div style="width:10px;height:auto;display:inline-block;"></div>
         <input type="text" placeholder="Search 354TheStars.." style="height:45px;width:900px;"/>
         <div style="width:10px;height:auto;display:inline-block;"></div>
-        <button type="button" style="width:150px;height:45px;"> Search </button>
+        <button type="button" style="width:150px;height:45px;background-color:snow;">
+            Search
+        </button>
     </div>
+
+</div>
+<!-- drop down sections -->
+
+<div style="height:40px;border-style:none solid solid solid;border-color:black;background-color:darkred;">
+<!-- drop down sections-->
+
+    <div>
+        <div style="height:35px;width:250px;float:left"> <!-- doesnt work -->
+            <select name="department">
+                <option>Select a Department:</option>
+                <option>Electronics</option>
+                <option>Furniture</option>
+                <option>Household</option>
+                <option>Misc</option>
+
+             </select>
+        </div>
+
+        <div style="float:left;height:auto;width:250px;">
+            <select name="contactus">
+                <option>Contact Us:</option>
+                <option>Via Email</option>
+            </select>
+
+        </div>
+
+        <div style="float:right;height:auto;width:310px;">
+            <div style="width:25px;height:20px;display:inline-block;;"></div>
+            <button type="button" style="height:35px;width:120px;">Cart</button>
+            <div style="width:25px;height:20px;display:inline-block;;"></div>
+            <button type="button" style="height:35px;width:120px;">Checkout</button>
+        </div>
+
+    </div>
+
 
 </div>
