Fixed product page bug when sorted

--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -7,11 +7,11 @@
   </div>
 </div>
 <br />
-<div *ngFor="let product of products; index as productId">
+<div *ngFor="let product of products">
   <div id="wrapper">
     <div class="box">
       <h3>
-        <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
+        <a [title]="product.name + ' details'" [routerLink]="['/products', product.productId]">
           <br />
           <img src="{{product.image}}">
           <br />
@@ -21,10 +21,8 @@
         <br />
         ${{product.price}}
       </h3>
-      <p *ngIf="product.description">
-        Description: {{product.description}}
-      </p>
       <p *ngIf="!product">No products to display</p>
     </div>
   </div>
 </div>
+
