--- a/Comp354Project/Project-UI/src/app/Components/related-items/related-items.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/related-items/related-items.component.html
@@ -1,11 +1,11 @@
-
 <div id="wrapper">
   <div class="box">
-<div *ngFor="let prod of products;index as productId">
-    <table *ngIf="prod.type == product.type && prod.name != product.name">
-        <tr>{{prod.name}}</tr>
-        <tr><a [routerLink]="['/products', productId]"> <img src="{{prod.image}}"></a></tr>
-    </table>
+    <div *ngFor="let prod of relatedProducts">
+        <table *ngIf="prod.type == product.type && prod.name != product.name">
+            <tr>{{prod.name}}</tr>
+            <tr><a [routerLink]="['/products', prod.productId]"> <img src="{{prod.image}}"></a></tr>
+        </table>
+    </div>
+  </div>
 </div>
-</div>
-</div>
+
