Fixed product page bug when sorted

--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.css
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.css
@@ -15,7 +15,7 @@
     display: inline-block;
     width: 170px;
     height: 275px!important;
-    rking text-align: center;
+    text-align: center;
     float: left;
 }
 
