--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -72,4 +72,7 @@
                                 </div>
                             </div>
                         </div>
-                        >>>>>>> products organized in a row and display filter working
+
+            </div>
+        </div>
+    </div>
