added a footer component

--- a/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
@@ -18,7 +18,7 @@
             <p style="color:white;">Register or Login to shop & sell!</p>
 
             <div style="width:50px;height:auto;display:inline-block;"></div>
-            <button type="button" style="height:35px;width:100px;">Register</button>
+            <button type="button" style="height:35px;width:100px;"><a href="users">Register</a></button>
             <div style="width:10px;height:auto;display:inline-block;"></div>
             <button type="button" style="height:35px;width:100px;">Login</button>
 
