commit before making index a component

--- a/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
@@ -35,7 +35,7 @@
     <!-- Search Bar-->
     <div>
         <div style="width:10px;height:auto;display:inline-block;"></div>
-        <input type="text" placeholder="Search 354TheStars.." style="height:45px;width:900px;"/>
+        <input type="text" placeholder="Search 354TheStars.." style="height:45px;width:900px;background-color:lightyellow;"/>
         <div style="width:10px;height:auto;display:inline-block;"></div>
         <button type="button" style="width:150px;height:45px;background-color:snow;">
             Search
@@ -49,25 +49,32 @@
 <!-- drop down sections-->
 
     <div>
-        <div style="height:35px;width:250px;float:left"> <!-- doesnt work -->
-            <select name="department">
-                <option>Select a Department:</option>
-                <option>Electronics</option>
-                <option>Furniture</option>
-                <option>Household</option>
-                <option>Misc</option>
-
-             </select>
+            <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="height:40px;width:170px;float:left;">
+            <p style="color:white;font-size:18px;align:center;">Menu 1</p>
+        </div>
+            <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 2</p>
         </div>
 
-        <div style="float:left;height:auto;width:250px;">
-            <select name="contactus">
-                <option>Contact Us:</option>
-                <option>Via Email</option>
-            </select>
 
+                <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 3</p>
+        </div>
+              <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 4</p>
         </div>
 
+
+        <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 5</p>
+        </div>
+
+        <!-- Buttons -->
         <div style="float:right;height:auto;width:310px;">
             <div style="width:25px;height:20px;display:inline-block;;"></div>
             <button type="button" style="height:35px;width:120px;">Cart</button>
