created structure for 20 products

--- a/Comp354Project/Project-UI/src/app/Components/index-area/index-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/index-area/index-area.component.html
@@ -10,9 +10,9 @@ Login now to access a variety of feature. Non members are restricted to browsing
 <h1>Browse..</h1>
 <!-- products, take components from working product page branch -->
 <!-- div boxes for first 10 products on main page-->
+<div style="height:25px;background-color:gray;"></div>
 <div style="height:175px;background-color:gray;">
 <div>
-                <div style="height:20px;background-color:green;"></div> <!-- Top gap-->
 
         <div style="height:135px;width:75px;background-color:black;float:left;"></div>
     <div style="height:135px;width:150px;background-color:red;float:left;"></div>
@@ -25,13 +25,28 @@ Login now to access a variety of feature. Non members are restricted to browsing
         <div style="height:135px;width:75px;background-color:black;float:left;"></div>
     <div style="height:135px;width:150px;background-color:red;float:left;"></div>
 
-</div>
-    <!-- div boxes for next 10 products on main page-->
-
+</div >
 
 
 </div>
 
+<!-- div boxes for next 10 products on main page-->
+<div style="height:175px;background-color:gray;">
+
+    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
+    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
+    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
+    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
+    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
+    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
+    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
+    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
+    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
+    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
+
+
+
+</div>
 
 
 
