--- a/Comp354Project/Project-UI/src/app/Components/index-area/index-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/index-area/index-area.component.html
@@ -14,16 +14,19 @@ Login now to access a variety of feature. Non members are restricted to browsing
 <div style="height:175px;background-color:gray;">
 <div>
 
-        <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-        <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-        <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-        <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-        <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
+        <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product1</div>
+        <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product2</div>
+
+        <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product3</div>
+
+        <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product4</div>
+
+        <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product5</div>
 
 </div >
 
@@ -33,21 +36,37 @@ Login now to access a variety of feature. Non members are restricted to browsing
 <!-- div boxes for next 10 products on main page-->
 <div style="height:175px;background-color:gray;">
 
-    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
-    <div style="height:135px;width:75px;background-color:black;float:left;"></div>
-    <div style="height:135px;width:150px;background-color:red;float:left;"></div>
 
+    <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product6</div>
+    <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product7</div>
 
+    <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product8</div>
+
+    <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product9</div>
+
+    <div style="height:135px;width:75px;float:left;"></div>
+    <div style="height:135px;width:150px;border-style:solid;border-color:black;background-color:white;float:left;">Product10</div>
 
 </div>
+<!-- Buttons to navigate pages?-->
+<div style="height:35px;background-color:gray;">
+    <div style="float:left;">
+        <button type="button">Previous Page</button>
+    </div>
 
+
+    <div style="height:35px;width:550px;float:left;"></div>
+    <div style="float:left;"><p style="color:white;"> Page: 1</p></div>
+
+    <div style="float:right;">
+        <button type="button">Next Page</button>
+    </div>
+
+</div>
 
 
 
@@ -56,7 +75,8 @@ Login now to access a variety of feature. Non members are restricted to browsing
 <br>
 <br>
 <hr/>
-<!-- DIV boxes-->
+
+<h1>Browse more categories..</h1>
 <div style="height:300px;background-color:gray;">
 
     <div style="height:25px;width:2500px;float:left;"></div>
@@ -65,7 +85,12 @@ Login now to access a variety of feature. Non members are restricted to browsing
     <div style="height:250px;width:35px;float:left;"></div>
     <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Most Popular (component)</div>
     <div style="height:250px;width:35px;float:left;"></div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Newly listed products (component)</div>
+
+    <div style="height:250px;width:35px;float:left;"></div>
     <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Your Recently Viewed (component)</div>
+
+
 
 </div>
 
