added routing links for each button
rn they all route to users component, once we have other pages and other components we just modfy the routing file

--- a/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
@@ -18,9 +18,9 @@
             <p style="color:white;">Register or Login to shop & sell!</p>
 
             <div style="width:50px;height:auto;display:inline-block;"></div>
-            <button type="button" style="height:35px;width:100px;"><a href="users">Register</a></button>
+            <button type="button" style="height:35px;width:100px;"><a href="register">Register</a></button>
             <div style="width:10px;height:auto;display:inline-block;"></div>
-            <button type="button" style="height:35px;width:100px;">Login</button>
+            <button type="button" style="height:35px;width:100px;"><a href="login">Login</a></button>
 
         </div>
 
@@ -38,7 +38,7 @@
         <input type="text" placeholder="Search 354TheStars.." style="height:45px;width:900px;background-color:lightyellow;"/>
         <div style="width:10px;height:auto;display:inline-block;"></div>
         <button type="button" style="width:150px;height:45px;background-color:snow;">
-            Search
+            <a href="search">Search</a>
         </button>
     </div>
 
@@ -77,9 +77,9 @@
         <!-- Buttons -->
         <div style="float:right;height:auto;width:310px;">
             <div style="width:25px;height:20px;display:inline-block;;"></div>
-            <button type="button" style="height:35px;width:120px;">Cart</button>
-            <div style="width:25px;height:20px;display:inline-block;;"></div>
-            <button type="button" style="height:35px;width:120px;">Checkout</button>
+            <button type="button" style="height:35px;width:120px;"><a href="cart">Cart</a></button>
+            <div style="width:25px;height:20px;display:inline-block;"></div>
+            <button type="button" style="height:35px;width:120px;"><a href="checkout">Checkout</a></button>
         </div>
 
     </div>
