--- a/Comp354Project/Project-UI/src/app/Components/index-area/index-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/index-area/index-area.component.html
@@ -55,7 +55,7 @@ Login now to access a variety of feature. Non members are restricted to browsing
 <!-- Buttons to navigate pages?-->
 <div style="height:35px;background-color:gray;">
     <div style="float:left;">
-        <button type="button">Previous Page</button>
+        <button type="button"><a href="prevpage">Previous Page</a></button>
     </div>
 
 
@@ -63,7 +63,7 @@ Login now to access a variety of feature. Non members are restricted to browsing
     <div style="float:left;"><p style="color:white;"> Page: 1</p></div>
 
     <div style="float:right;">
-        <button type="button">Next Page</button>
+        <button type="button"><a href="nextpage">Next Page</a></button>
     </div>
 
 </div>
@@ -81,14 +81,16 @@ Login now to access a variety of feature. Non members are restricted to browsing
 
     <div style="height:25px;width:2500px;float:left;"></div>
     <div style="height:250px;width:25px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Trending (component)</div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">
+        <a href="trending">Trending (component)</a></div>
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Most Popular (component)</div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">
+        <a href="popular">Most Popular (component)</a></div>
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Newly listed products (component)</div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="new">Newly listed products (component)</a></div>
 
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Your Recently Viewed (component)</div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="recent">Your Recently Viewed (component)</a></div>
 
 
 
