--- a/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header-area/header-area.component.html
@@ -1,11 +1,88 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active" routerLink="/page1">Page 1 <span class="sr-only">(current)</span></a>
+<!-- <p>header-area works!</p> -->
+<div style="height:150px;border-style:solid;border-color:black;background-color:firebrick;">
+
+
+    <div>
+        <div style="height:60px;width:190px;float:left;">
+            <p style="font-family: Impact, Charcoal, sans-serif;font-size:28px;font-style:italic;font-variant:small-caps;color:deepskyblue;letter-spacing:2px;">
+                354TheStars
+            </p>
+
         </div>
+
+
+        <!-- Register & login button-->
+        <div style="height:147px;width:300px;float:right;background-color:darkslategrey;border-style:none none solid solid;border-color:black;">
+
+            <div style="width:50px;height:auto;display:inline-block;"></div>
+            <p style="color:white;">Register or Login to shop & sell!</p>
+
+            <div style="width:50px;height:auto;display:inline-block;"></div>
+            <button type="button" style="height:35px;width:100px;"><a href="register">Register</a></button>
+            <div style="width:10px;height:auto;display:inline-block;"></div>
+            <button type="button" style="height:35px;width:100px;"><a href="login">Login</a></button>
+
+        </div>
+
     </div>
-</nav>
+
+
+    <!-- search bar-->
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <!-- Search Bar-->
+    <div>
+        <div style="width:10px;height:auto;display:inline-block;"></div>
+        <input type="text" placeholder="Search 354TheStars.." style="height:45px;width:900px;background-color:lightyellow;"/>
+        <div style="width:10px;height:auto;display:inline-block;"></div>
+        <button type="button" style="width:150px;height:45px;background-color:snow;">
+            <a href="search">Search</a>
+        </button>
+    </div>
+
+</div>
+<!-- drop down sections -->
+
+<div style="height:40px;border-style:none solid solid solid;border-color:black;background-color:darkred;">
+    <!-- drop down sections-->
+
+    <div>
+        <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="height:40px;width:170px;float:left;">
+            <p style="color:white;font-size:18px;align:center;">Menu 1</p>
+        </div>
+        <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 2</p>
+        </div>
+
+
+        <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 3</p>
+        </div>
+        <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 4</p>
+        </div>
+
+
+        <div style="height:40px;width:30px;display:inline-block;float:left;"></div>
+        <div style="float:left;height:40px;width:170px;">
+            <p style="color:white;font-size:18px;align:center;">Menu 5</p>
+        </div>
+
+        <!-- Buttons -->
+        <div style="float:right;height:auto;width:310px;">
+            <div style="width:25px;height:20px;display:inline-block;;"></div>
+            <button type="button" style="height:35px;width:120px;"><a href="cart">Cart</a></button>
+            <div style="width:25px;height:20px;display:inline-block;"></div>
+            <button type="button" style="height:35px;width:120px;"><a href="checkout">Checkout</a></button>
+        </div>
+
+    </div>
+
+
+</div>
