--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.css
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.css
@@ -1,25 +1,23 @@
-#wrapper {
-  display: inline!important;
+/* #wrapper {
+  display: inline;
   height: 275px;
   max-width: 540px;
-}
+} */
 .box {
   margin: 5px;
   display: inline-block;
   width: 170px;
-  height: 275px!important;
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
-  background-color: #F5FBEF;
->>>>>>> products organized in a row and display filter working
-=======
-
->>>>>>> Fixed product page bug when sorted
+  height: 275px;
   text-align: center;
   float: left;
 }
+.product-description{
+  background-color: black;
+  float: right;
+}
 .ng-repeat {
   display: inline-block;
+}
+img{
+  width: 500px;
 }
