--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.css
@@ -8,18 +8,13 @@
   display: inline-block;
   width: 170px;
   height: 275px!important;
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
   background-color: #F5FBEF;
->>>>>>> products organized in a row and display filter working
-=======
-
->>>>>>> Fixed product page bug when sorted
   text-align: center;
   float: left;
 }
 .ng-repeat {
   display: inline-block;
+}
+img{
+  width: 200px;
 }
