--- a/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-details/product-details.component.html
@@ -3,15 +3,17 @@
 <div *ngIf="product">
   <div id="wrapper">
     <div class="box">
+     <img src="{{product.image}}">
       <h3>{{ product.name }}</h3>
-      <img src="{{product.image}}">
-      <h4>{{ product.price | currency }}</h4>
+      <p>{{ product.price | currency }}</p>
+
+
       <p>{{ product.description }}</p>
       <p>Brand: {{product.brand}}</p>
     </div>
   </div>
 </div>
-
+<button (click)="addToCart()">Add to cart</button>
 <br/>
 <div id="wrapper">
   <div class="box">
