--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -1,8 +1,19 @@
+
 <h2>Products</h2>
 <!--          Search bar-->
 <input [(ngModel)] = "searchText"  placeholder="Type to Search" type="search">
 <button class="search-button">Submit</button>
-
+<br>
+<br>
+<div id="wrapper">
+  Categories: <select class="form-control"  [(ngModel)] = "selectedCategoryButtonValue" (change)="sortCategories()">
+        <option value="">All</option>
+        <option value="phone">Phone</option>
+        <option value="umbrella">Umbrellas</option>
+        <option value="jacket">Jacket</option>
+  </select>
+</div>
+<br>
 <div id="wrapper">
   <select class="form-control"  [(ngModel)] = "selectedDropDownButtonValue" (change)="onDropDownButtonSelectionChange()">
         <option value="1">Sort By Name (A to Z)</option>
@@ -13,7 +24,7 @@
 </div>
 <br />
 <!--Passes each product in database to the filter pipe-->
-<div *ngFor="let product of products | filter : searchList">
+<div *ngFor="let product of products | filter : searchText">
   <div id="wrapper">
     <div class="box">
       <h3>
