--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -5,9 +5,9 @@
     <div class="col-md-12">
       <div class="card bg-dark my-5">
         <div class="card-body">
-          <h2 class="card-title text-center text-white py-3" >{{ title }}</h2>
+          <!-- <h2 class="card-title text-center text-white py-3" >{{ title }}</h2>-->
           <ul class="text-center list-inline py-3">
-            <li class="list-inline-item"><a routerLink="/users" class="btn btn-info"> List Users</a></li>
+            <!-- <li class="list-inline-item"><a routerLink="/users" class="btn btn-info"> List Users</a></li> -->
 
 
           </ul>
