--- a/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/product-page/product-page.component.html
@@ -1,7 +1,6 @@
 <h2>Products</h2>
 <!--          Search bar-->
-<input [(ngModel)] = "searchText"  placeholder="Type to Search" type="search">
-<button class="search-button">Submit</button>
+<input id = "searchBar" placeholder="Type to Search" type="search" [ngModel] = "searchText" #change (search)="update(change.value)" value="sup">
 
 <div id="wrapper">
   <select class="form-control"  [(ngModel)] = "selectedDropDownButtonValue" (change)="onDropDownButtonSelectionChange()">
@@ -13,7 +12,7 @@
 </div>
 <br />
 <!--Passes each product in database to the filter pipe-->
-<div *ngFor="let product of products | filter : searchList">
+<div *ngFor="let product of products | filter : searchText">
   <div id="wrapper">
     <div class="box">
       <h3>
