--- a/Comp354Project/Project-UI/src/app/app.component.html
+++ b/Comp354Project/Project-UI/src/app/app.component.html
@@ -1,3 +1,4 @@
+<header></header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -20,3 +21,4 @@
     </div>
   </div>
 </div>
+<footer></footer>
