--- a/Comp354Project/Project-UI/src/app/Components/footer/footer.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/footer/footer.component.html
@@ -1,10 +1,11 @@
 
-<div style="height:250px;border-style:solid;border-color:black;background-color:firebrick;">
+<div style="height:250px;border-style:solid;border-color:black;background-color:#163172;">
 
-    <!-- <div style="border-style:solid;border-color:red;width:525px;float:left;"> -->
-    <h3 style="color:white;text-decoration:underline;">Categories</h3>
+<div>
+    <h3 style="color:white;">Categories</h3>
+</div>
+
     <hr/>
-    <!-- </div> -->
     <div>
         <!-- border-style:solid;border-color:red;background-color:white; -->
         <div style="height:170px;width:200px;float:left;">
@@ -26,10 +27,40 @@
                 - Misc<br/>
             </p>
         </div>
-        <div style="height:170px;width:100px;float:left;"></div>
-        <div style="border-style:solid;border-color:red;background-color:white;height:170px;width:200px;float:left;">menu</div>
-        <div style="border-style:solid;border-color:red;background-color:white;height:170px;width:200px;float:left;">guide</div>
-        <div style="border-style:solid;border-color:red;background-color:white;height:170px;width:200px;float:left;">about</div>
-        <div style="border-style:solid;border-color:red;background-color:white;height:170px;width:200px;float:right;">social media</div>
+        <div style="height:170px;width:200px;float:left;"></div>
+        <div style="height:170px;width:200px;float:left;">
+            <p style="color:white;">
+                - Menu<br/>
+                - Menu<br/>
+                - Menu<br/>
+                - Menu<br/>
+                - Menu<br/>
+            </p>
+        </div>
+        <div style="height:170px;width:200px;float:left;">
+            <p style="color:white;">
+                - Guide<br/>
+                - Guide<br/>
+                - Guide<br/>
+                - Guide<br/>
+                - Guide<br/>
+            </p>
+        </div>
+        <div style="height:170px;width:200px;float:left;">
+            <p style="color:white;">
+                - About<br/>
+                - About<br/>
+                - About<br/>
+                - About<br/>
+                - About<br/>
+            </p>
+        </div>
+        <div style="height:170px;width:200px;float:left;">
+            <p style="color:white;">
+                - Facebook<br/>
+                - Twitter<br/>
+            </p>
+        </div>
+
     </div>
 </div>
