--- a/Comp354Project/Project-UI/src/app/Components/header/header.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/header/header.component.html
@@ -1,8 +1,7 @@
-<div style="height:150px;border-style:solid;border-color:black;background-color:gray;">
-
+<div style="height:150px;border-style:solid;border-color:black;background-color:#163172;">
 
     <div>
-        <div style="height:60px;width:190px;border-style:solid;border-color:black;float:left;">
+        <div style="height:60px;width:190px;border-style:none;border-color:none;float:left;">
             <p style="font-family: Impact, Charcoal, sans-serif;font-size:28px;font-style:italic;font-variant:small-caps;color:white;letter-spacing:2px;">
                 354TheStars
             </p>
@@ -11,7 +10,7 @@
 
 
         <!-- login button-->
-        <div style="height:150px;width:300px;border-style:solid;border-color:blue;float:right;background-color:black;">
+        <div style="height:150px;width:300px;border-style:none;border-color:none;float:right;background-color:#163172;">
 
             <div style="width:50px;height:auto;display:inline-block;"></div>
             <p style="color:white;">Register or Login to shop & sell!</p>
@@ -25,8 +24,6 @@
 
     </div>
 
-
-    <!-- search bar-->
     <br/>
     <br/>
     <br/>
