--- a/Comp354Project/Project-UI/src/app/Components/main/main.component.html
+++ b/Comp354Project/Project-UI/src/app/Components/main/main.component.html
@@ -1,5 +1,5 @@
-<div style="height:25px;background-color:gray;"></div>
-<div style="height:175px;background-color:gray;">
+<div style="height:25px;background-color:white;"></div>
+<div style="height:175px;background-color:white;">
     <div>
 
         <div style="height:135px;width:75px;float:left;"></div>
@@ -22,7 +22,7 @@
 </div>
 
 <!-- div boxes for next 10 products on main page-->
-<div style="height:175px;background-color:gray;">
+<div style="height:175px;background-color:white;">
 
 
     <div style="height:135px;width:75px;float:left;"></div>
@@ -41,14 +41,14 @@
 
 </div>
 <!-- Buttons to navigate pages?-->
-<div style="height:35px;background-color:gray;">
+<div style="height:35px;background-color:white;">
     <div style="float:left;">
         <button type="button"><a href="prevpage">Previous Page</a></button>
     </div>
 
 
     <div style="height:35px;width:550px;float:left;"></div>
-    <div style="float:left;"><p style="color:white;"> Page: 1</p></div>
+    <div style="float:left;"><p style="color:black;"> Page: 1</p></div>
 
     <div style="float:right;">
         <button type="button"><a href="nextpage">Next Page</a></button>
@@ -59,20 +59,20 @@
 <br>
 <hr/>
 
-<div style="height:300px;background-color:gray;">
+<div style="height:300px;background-color:white;">
 
     <div style="height:25px;width:2500px;float:left;"></div>
     <div style="height:250px;width:25px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">
-        <a href="trending">Trending (component)</a></div>
+    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;">
+        <a href="trending">Trending </a></div>
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">
-        <a href="popular">Most Popular (component)</a></div>
+    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;">
+        <a href="popular">Most Popular </a></div>
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="new">Newly listed products (component)</a></div>
+    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="new">Newly listed products (component)</a></div>
 
     <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="recent">Your Recently Viewed (component)</a></div>
+    <div style="border-style:solid;border-color:black;border-width:3px;background-color:white;height:250px;width:15%;float:left;"><a href="recent">Your Recently Viewed (component)</a></div>
 
 
 
